<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safety Ninja</string>
    <string name="menu_settings">Settings</string>
    <string name="add_contacts">Add Safety Contacts</string>
    <string name="safe_now">Send Location to Number</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="sos">Help!</string>
    <string name="lat">Latitude: </string>
    <string name="lon">Longitude: </string>
    <string name="call">Call PSAFE</string>
    <string name="enter">Enter a phone number</string>
    <string name="sound">Sound alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">Signal Confirmation</string>
    <string name="title_activity_send_to_friend">Location Message Sent</string>
    <string name="title_activity_play_alarm_sound">PlayAlarmSound</string>

</resources>